[package]
name = "pluot-futures-time"
version = "3.0.1"
license = "MIT OR Apache-2.0"
description = "futures-time with web feature for pluot"
readme = "README.md"
edition.workspace = true
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]
default = ["dep:async-io"]
web = ["dep:web-time", "dep:gloo-timers"]

[dependencies]
futures-core = "0.3.19"
pin-project-lite = "0.2.8"
async-channel = "1.6.1"
async-io = { version = "2.0.0", optional = true }
# For wasm32-unknown-unknown targets
web-time = { version = "1.1.0", optional = true }
gloo-timers = { version = "0.3", optional = true }

[dev-dependencies]
futures-lite = "2.6.0"
