[package]
name = "pluot_cli"
description = "An example CLI."
edition.workspace = true
rust-version.workspace = true
# license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "pluot_cli"
path = "src/main.rs"

[dependencies]
pluot = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
image = { workspace = true }
