[package]
name = "pluot_http"
description = "An example HTTP server."
edition = "2021"
rust-version = "1.92"
publish = false

[dependencies]
pluot = { path = "../../crates/pluot" }
gotham = { version = "0.8.0" }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
