[package]
name = "pluot_xilem"
description = "An example desktop GUI built with the Xilem framework."
edition = "2021"
rust-version = "1.92"
publish = false

[dependencies]
pluot = { path = "../../crates/pluot" }
xilem = { git = "https://github.com/linebender/xilem.git", rev = "5281ffb", subdirectory = "xilem" }
serde_json = "1.0.143"
